@@ -60,38 +60,56 @@ install {
     }
 }
 
-// This generates sources.jar
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+
+// 命令 java -Djava.ext.dirs=. -jar dokka-fatjar.jar ./src/main/java -format javadoc -output ./build/doc
+
+task dokkaJavadoc(type: org.gradle.api.tasks.Exec) {
+    workingDir '.'
+    println "WorkingDir: $workingDir"
+    ext.toolJarPath = "$workingDir"
+    ext.dokkaJarPath = "$workingDir"+File.separator+"dokka-fatjar.jar"
+    ext.sourceDirs = "$workingDir"+File.separator+"src"+File.separator+"main"+File.separator+"java"
+    ext.outputFormat = 'javadoc'
+    ext.outputDirectory = "$buildDir" + File.separator+ "doc"
+
+    /**
+     *
+     * 这里输出格式可以为: html , markdown, jekyll, javadoc
+     * 如果是 javadoc 格式, 他会用到 javadoc 的库,
+     * 如果你的 PATH 没有包含 JDK x.x.x/lib 路径的话, 就会报 'java.lang.ClassNotFoundException: com.sun.javadoc.DocErrorReporter' 异常
+     * 所以需要你主动将这个路径加进来, 或者将 JDK x.x.x/lib/tools.jar 文件拷贝出来, 下面这个命令我就是拷贝到了当前目录
+     *
+     * dokka-fatjar.jar 这个jar就是从 dokka 项目上下载下来的
+     */
+    commandLine "cmd" , "/c", "java -Djava.ext.dirs=$toolJarPath -jar $dokkaJarPath $sourceDirs -format $outputFormat -output $outputDirectory"
+
+    /**
+     * 如果你是 Linux 系统, 就用这个
+     */
+//    commandLine "java -Djava.ext.dirs=$toolJarPath -jar $dokkaJarPath $sourceDirs -format $outputFormat -output $outputDirectory"
+
 }
 
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-
-// This generates javadoc.jar
-task javadocJar(type: Jar, dependsOn: javadoc) {
+/**
+ * 这里将生成的文档打包成 xxxx-javadoc.jar
+ */
+task kotlinDocJar(type: Jar, dependsOn: dokkaJavadoc) {
     classifier = 'javadoc'
-    from javadoc.destinationDir
+    from dokkaJavadoc.outputDirectory
 }
+
+/**
+ * 这里将源码打包成 xxx-sources.jar
+ */
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.srcDirs
+}
+
 
 artifacts {
-    archives javadocJar
+    archives kotlinDocJar
     archives sourcesJar
-}
-
-// javadoc configuration
-javadoc {
-    options {
-        encoding "UTF-8"
-        charSet 'UTF-8'
-        author true
-        version projectVersionName
-        links "http://docs.oracle.com/javase/7/docs/api"
-        title javadocName
-    }
 }
 
 // bintray configuration
